Fix overflow issues in bordered table

--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -100,6 +100,10 @@ $basic-border: 1px solid #e2e2e2;
 
   .ant-table {
     border-radius: 0;
+
+    .ant-table-row > td:not(:first-of-type) {
+      overflow: hidden !important;
+    }
   }
 
   &.ant-table-wrapper .ant-table .ant-table-content {
